# AdventOfCode

./: .gitignore  10.py
2015/: 1.cs  1.py  11.cs  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.cs  23.py  3.cs  4.cs  5.1.cs  5.2.cs  6.py  7.py  8.py  d9.m
2016/: 1.cpp  10.py  2.cpp  3.cpp  4.cpp  5.cs  7.cpp  9.py  d6.m  d8.m
2017/: d1.m  d12.cpp  d2.m  d3.m  d4.m  d5.m  d6.m  d8.m  d9.cpp
2018/: 1.py  4.cpp  6.py  d2.m  d5.m
2019/: 1.hs  2.c  2.sh  4.cpp  d10.m  d8.m
2019/inputs/: id_rsa.pub
2019/intcode/: 2.c  CMakeLists.txt
2019/intcode/days/: 2.c  5.c  7.c  CMakeLists.txt
2019/intcode/intcode_functions/: intcode.c  intcode.h
2019/intcode/lib/: CMakeLists.txt  intcode.c  intcode.h
2019/intcode/tst/: CMakeLists.txt
2020/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  18.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
2021/: 1.go  1.jl  1.py  10.jl  11.jl  12.jl  13.jl  14.jl  15.jl  16.jl  17.jl  18.jl  2.jl  20.jl  21.jl  24.jl  25.jl  3.jl  4.jl  5.jl  6.jl  7.jl  8.jl  9.jl
2022/: 1.go  2.go  3.go  4.go  5.go  6.go  7.go  8.go  go.mod
2022/1/: 1.go
2022/10/: 10.go
2022/13/: 13.go
2022/2/: 2.go
2022/3/: 3.go
2022/4/: 4.go
2022/5/: 5.go
2022/6/: 6.go
2022/7/: 7.go
2022/8/: 8.go
2022/inputs/: 5.txt
2023/: 1.py  2.py  3.py  4.py  5.py
2024/: 1.lua  2.lua  3.lua
2025/1/: CMakeLists.txt
2025/1/src/: 1.cpp
2025/10/: CMakeLists.txt
2025/10/src/: main.cpp
2025/11/: CMakeLists.txt
2025/11/src/: main.cpp
2025/2/: CMakeLists.txt
2025/2/src/: 2.cpp
2025/3/: CMakeLists.txt
2025/3/src/: 3.cpp
2025/4/: CMakeLists.txt
2025/4/src/: 4.cpp
2025/5/: CMakeLists.txt
2025/5/src/: 5.cpp
2025/6/: CMakeLists.txt
2025/6/src/: 6.cpp
2025/7/: CMakeLists.txt
2025/7/src/: 7.cpp
2025/8/: CMakeLists.txt
2025/8/src/: main.cpp
2025/9/: CMakeLists.txt
2025/9/src/: main.cpp
